--- a/frontend/src/index.template.html
+++ b/frontend/src/index.template.html
@@ -3,7 +3,7 @@
   <head>
     <!-- <title><%= productName %></title> -->
 
-    <title>CognosBOT</title>
+    <title>Duland</title>
     <meta charset="utf-8">
     <meta name="description" content="<%= productDescription %>">
     <meta name="format-detection" content="telephone=no">
